--- a/public/assets/scss/app.css
+++ b/public/assets/scss/app.css
@@ -4,7 +4,7 @@
  * Copyright 2011-2024 The Bootstrap Authors
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
-@import "../plugins/perfect-scrollbar.css";
+@import "~perfect-scrollbar/css/perfect-scrollbar.css";
 :root,
 [data-bs-theme=light] {
   --bs-blue: #435ebe;
@@ -11985,7 +11985,7 @@ textarea.form-control-lg {
 @font-face {
   font-display: block;
   font-family: "bootstrap-icons";
-  src: url("fonts/bootstrap-icons.woff2") format("woff");
+  src: url("~bootstrap-icons/font/fonts/bootstrap-icons.woff2") format("woff");
 }
 .bi::before,
 [class^=bi-]::before,
@@ -20212,7 +20212,7 @@ body .bi::before, [class^=bi-]::before, [class*=" bi-"]::before {
   font-style: normal;
   font-display: swap;
   font-weight: 300;
-  src: url("fonts/nunito-latin-300-normal.woff2") format("woff2"), url("fonts/nunito-latin-300-normal.woff") format("woff");
+  src: url("@/assets/static/fonts/nunito-latin-300-normal.woff2") format("woff2"), url("@/assets/static/fonts/nunito-latin-300-normal.woff") format("woff");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* nunito-latin-400-normal*/
@@ -20221,7 +20221,7 @@ body .bi::before, [class^=bi-]::before, [class*=" bi-"]::before {
   font-style: normal;
   font-display: swap;
   font-weight: 400;
-  src: url("fonts/nunito-latin-400-normal.woff2") format("woff2"), url("fonts/nunito-latin-400-normal.woff") format("woff");
+  src: url("@/assets/static/fonts/nunito-latin-400-normal.woff2") format("woff2"), url("@/assets/static/fonts/nunito-latin-400-normal.woff") format("woff");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 @font-face {
@@ -20229,7 +20229,7 @@ body .bi::before, [class^=bi-]::before, [class*=" bi-"]::before {
   font-style: normal;
   font-display: swap;
   font-weight: 600;
-  src: url("fonts/nunito-latin-600-normal.woff2") format("woff2"), url("fonts/nunito-latin-600-normal.woff") format("woff");
+  src: url("@/assets/static/fonts/nunito-latin-600-normal.woff2") format("woff2"), url("@/assets/static/fonts/nunito-latin-600-normal.woff") format("woff");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* nunito-latin-700-normal*/
@@ -20238,7 +20238,7 @@ body .bi::before, [class^=bi-]::before, [class*=" bi-"]::before {
   font-style: normal;
   font-display: swap;
   font-weight: 700;
-  src: url("fonts/nunito-latin-700-normal.woff2") format("woff2"), url("fonts/nunito-latin-700-normal.woff") format("woff");
+  src: url("@/assets/static/fonts/nunito-latin-700-normal.woff2") format("woff2"), url("@/assets/static/fonts/nunito-latin-700-normal.woff") format("woff");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 @font-face {
@@ -20246,7 +20246,7 @@ body .bi::before, [class^=bi-]::before, [class*=" bi-"]::before {
   font-style: normal;
   font-display: swap;
   font-weight: 800;
-  src: url("fonts/nunito-latin-800-normal.woff2") format("woff2"), url("fonts/nunito-latin-800-normal.woff") format("woff");
+  src: url("@/assets/static/fonts/nunito-latin-800-normal.woff2") format("woff2"), url("@/assets/static/fonts/nunito-latin-800-normal.woff") format("woff");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /*
@@ -21180,7 +21180,7 @@ body .bi::before, [class^=bi-]::before, [class*=" bi-"]::before {
 }
 
 .sidebar-wrapper {
-  width: 315px;
+  width: 300px;
   height: 100vh;
   position: fixed;
   top: 0;
