--- a/public/assets/scss/themes/dark/app-dark.css
+++ b/public/assets/scss/themes/dark/app-dark.css
@@ -6327,7 +6327,7 @@ html[data-bs-theme=dark] .placeholder-wave {
   font-style: normal;
   font-display: swap;
   font-weight: 300;
-  src: url("fonts/nunito-latin-300-normal.woff2") format("woff2"), url("fonts/nunito-latin-300-normal.woff") format("woff");
+  src: url("@/assets/static/fonts/nunito-latin-300-normal.woff2") format("woff2"), url("@/assets/static/fonts/nunito-latin-300-normal.woff") format("woff");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 @font-face {
@@ -6335,7 +6335,7 @@ html[data-bs-theme=dark] .placeholder-wave {
   font-style: normal;
   font-display: swap;
   font-weight: 400;
-  src: url("fonts/nunito-latin-400-normal.woff2") format("woff2"), url("fonts/nunito-latin-400-normal.woff") format("woff");
+  src: url("@/assets/static/fonts/nunito-latin-400-normal.woff2") format("woff2"), url("@/assets/static/fonts/nunito-latin-400-normal.woff") format("woff");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 @font-face {
@@ -6343,7 +6343,7 @@ html[data-bs-theme=dark] .placeholder-wave {
   font-style: normal;
   font-display: swap;
   font-weight: 600;
-  src: url("fonts/nunito-latin-600-normal.woff2") format("woff2"), url("fonts/nunito-latin-600-normal.woff") format("woff");
+  src: url("@/assets/static/fonts/nunito-latin-600-normal.woff2") format("woff2"), url("@/assets/static/fonts/nunito-latin-600-normal.woff") format("woff");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 @font-face {
@@ -6351,7 +6351,7 @@ html[data-bs-theme=dark] .placeholder-wave {
   font-style: normal;
   font-display: swap;
   font-weight: 700;
-  src: url("fonts/nunito-latin-700-normal.woff2") format("woff2"), url("fonts/nunito-latin-700-normal.woff") format("woff");
+  src: url("@/assets/static/fonts/nunito-latin-700-normal.woff2") format("woff2"), url("@/assets/static/fonts/nunito-latin-700-normal.woff") format("woff");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 @font-face {
@@ -6359,7 +6359,7 @@ html[data-bs-theme=dark] .placeholder-wave {
   font-style: normal;
   font-display: swap;
   font-weight: 800;
-  src: url("fonts/nunito-latin-800-normal.woff2") format("woff2"), url("fonts/nunito-latin-800-normal.woff") format("woff");
+  src: url("@/assets/static/fonts/nunito-latin-800-normal.woff2") format("woff2"), url("@/assets/static/fonts/nunito-latin-800-normal.woff") format("woff");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 html[data-bs-theme=dark] .alert {
@@ -7210,7 +7210,7 @@ html[data-bs-theme=dark] #sidebar.active .sidebar-wrapper {
   left: 0;
 }
 html[data-bs-theme=dark] .sidebar-wrapper {
-  width: 315px;
+  width: 300px;
   height: 100vh;
   position: fixed;
   top: 0;
